# MMPIS_LAB

./: CMakeLists.txt
Lab1/: Ast.cpp  Ast.hpp
Lab1/Test/: CMakeLists.txt  main.cpp
Lab1/Test/TestFiles/: 1.txt
Lab1/Test/TestFiles/Input/: 1.txt  2.txt  3.txt
Lab1/Test/TestFiles/Output/: 1.txt  2.txt
Lab2/: Graph.cpp  Graph.hpp
Lab2/Test/: CMakeLists.txt  main.cpp
Lab2/Test/TestFiles/Input/: 1.txt
